--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<% if current_user.present? %>
+<%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
+<% else %>
+<%= link_to 'Sign In', new_user_session_path %>
+<%= link_to 'Register Now!' , new_user_registration_path %>
+<% end %>
+	
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
